--- a/FRC283Lib/.classpath
+++ b/FRC283Lib/.classpath
@@ -9,5 +9,6 @@
 	<classpathentry kind="var" path="wpiutil" sourcepath="wpiutil.sources"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry exported="true" kind="lib" path="lib/gson-2.8.5.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Benjamin/Desktop/MyJava.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
